package com.antigua.mynoteroom

// HomeScreen
const val HOME_TITLE = "title"
const val HOME_ITEM_NOTE = "note_item"
const val HOME_BUTTON_NOTE_ADD = "button_note_add"

// NoteScreen
const val NOTE_TITLE = "note_title"
const val NOTE_BUTTON_BACK = "button_back"
const val NOTE_BUTTON_DONE = "button_done"
const val NOTE_TEXT_FIELD = "text_field"